Pointing visitors to the mailing list for questions

--- a/README
+++ b/README
@@ -60,3 +60,4 @@ Follow these simple steps to use the samples:
    http://localhost:8080/MyGosuServlet/sample/hello/HelloWorld.gst
    
    
+Any questions? E-mail gosu-lang@googlegroups.com.
